// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withFchg arrivalCancelled.xml 1`] = `
Object {
  "departures": Array [
    Object {
      "additional": undefined,
      "arrival": Object {
        "cancelled": true,
        "delay": 0,
        "hidden": false,
        "platform": "13",
        "scheduledPlatform": "13",
        "scheduledTime": 2019-03-17T12:58:00.000Z,
        "time": 2019-03-17T12:58:00.000Z,
        "wingIds": undefined,
      },
      "auslastung": false,
      "cancelled": undefined,
      "currentStopPlace": Object {
        "evaNumber": "test",
        "name": "test",
      },
      "departure": Object {
        "hidden": false,
        "platform": "13",
        "scheduledPlatform": "13",
        "scheduledTime": 2019-03-17T13:00:00.000Z,
        "time": 2019-03-17T13:00:00.000Z,
        "wingIds": undefined,
      },
      "destination": "Hagen Hbf",
      "hiddenReihung": true,
      "id": "6062058741531589910",
      "initialDeparture": 2019-03-16T14:24:00.000Z,
      "lineNumber": "8",
      "mediumId": "6062058741531589910-1903161424",
      "messages": Object {
        "delay": Array [],
        "him": Array [],
        "qos": Array [],
      },
      "o": "800354",
      "platform": "13",
      "productClass": "S",
      "rawId": "-6062058741531589910-1903161424-13",
      "ref": undefined,
      "reihung": false,
      "route": Array [
        Object {
          "name": "Mönchengladbach Hbf",
        },
        Object {
          "name": "Mönchengladbach-Lürrip",
        },
        Object {
          "name": "Korschenbroich",
        },
        Object {
          "name": "Kleinenbroich",
        },
        Object {
          "name": "Büttgen",
        },
        Object {
          "name": "Neuss Hbf",
        },
        Object {
          "name": "Neuss Am Kaiser",
        },
        Object {
          "name": "Neuss Rheinparkcenter",
        },
        Object {
          "name": "Düsseldorf-Hamm",
        },
        Object {
          "name": "Düsseldorf Völklinger Str.",
        },
        Object {
          "name": "Düsseldorf-Bilk",
        },
        Object {
          "name": "Düsseldorf Friedrichstadt",
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "test",
        },
        Object {
          "name": "Düsseldorf-Flingern",
          "showVia": true,
        },
        Object {
          "name": "Düsseldorf-Gerresheim",
        },
        Object {
          "name": "Erkrath",
        },
        Object {
          "name": "Hochdahl",
        },
        Object {
          "name": "Hochdahl-Millrath",
        },
        Object {
          "name": "Haan-Gruiten",
        },
        Object {
          "name": "Wuppertal-Vohwinkel",
        },
        Object {
          "name": "Wuppertal-Sonnborn",
        },
        Object {
          "name": "Wuppertal-Zoologischer Garten",
        },
        Object {
          "name": "Wuppertal-Steinbeck",
        },
        Object {
          "name": "Wuppertal Hbf",
          "showVia": true,
        },
        Object {
          "name": "Wuppertal-Unterbarmen",
        },
        Object {
          "name": "Wuppertal-Barmen",
        },
        Object {
          "name": "Wuppertal-Oberbarmen",
        },
        Object {
          "name": "Wuppertal-Langerfeld",
        },
        Object {
          "name": "Schwelm West",
        },
        Object {
          "name": "Schwelm",
        },
        Object {
          "name": "Gevelsberg West",
        },
        Object {
          "name": "Gevelsberg-Kipp",
        },
        Object {
          "name": "Gevelsberg Hbf",
          "showVia": true,
        },
        Object {
          "name": "Gevelsberg-Knapp",
        },
        Object {
          "name": "Hagen-Westerbauer",
        },
        Object {
          "name": "Hagen-Heubing",
        },
        Object {
          "name": "Hagen-Wehringhausen",
        },
        Object {
          "name": "Hagen Hbf",
        },
      ],
      "scheduledDestination": "Hagen Hbf",
      "scheduledPlatform": "13",
      "substitute": false,
      "train": Object {
        "line": "8",
        "longDistance": false,
        "name": "S 8",
        "number": "30889",
        "type": "S",
      },
    },
  ],
  "lookbehind": Array [],
  "wings": Object {},
}
`;

exports[`withFchg arrivalWing.xml 1`] = `
Object {
  "departures": Array [
    Object {
      "additional": undefined,
      "arrival": Object {
        "cancelled": false,
        "delay": 0,
        "hidden": false,
        "platform": "8",
        "scheduledPlatform": "8",
        "scheduledTime": 2019-03-17T12:32:00.000Z,
        "time": 2019-03-17T12:32:00.000Z,
        "wingIds": Array [
          "4550748245722881479-1903170818",
        ],
      },
      "auslastung": true,
      "cancelled": false,
      "currentStopPlace": Object {
        "evaNumber": "test",
        "name": "test",
      },
      "departure": Object {
        "cancelled": false,
        "delay": 0,
        "hidden": false,
        "platform": "8 D-G",
        "scheduledPlatform": "8 D-G",
        "scheduledTime": 2019-03-17T12:36:00.000Z,
        "time": 2019-03-17T12:36:00.000Z,
        "wingIds": undefined,
      },
      "destination": "Hamburg-Altona",
      "hiddenReihung": false,
      "id": "4771830392602697451",
      "initialDeparture": 2019-03-17T08:18:00.000Z,
      "lineNumber": undefined,
      "mediumId": "4771830392602697451-1903170818",
      "messages": Object {
        "delay": Array [],
        "him": Array [],
        "qos": Array [],
      },
      "o": "80",
      "platform": "8 D-G",
      "productClass": "F",
      "rawId": "4771830392602697451-1903170818-10",
      "ref": undefined,
      "reihung": true,
      "route": Array [
        Object {
          "name": "München Hbf",
        },
        Object {
          "name": "München-Pasing",
        },
        Object {
          "name": "Augsburg Hbf",
        },
        Object {
          "name": "Donauwörth",
        },
        Object {
          "name": "Nürnberg Hbf",
        },
        Object {
          "name": "Würzburg Hbf",
        },
        Object {
          "name": "Fulda",
        },
        Object {
          "name": "Kassel-Wilhelmshöhe",
        },
        Object {
          "name": "Göttingen",
        },
        Object {
          "additional": undefined,
          "cancelled": false,
          "name": "test",
        },
        Object {
          "name": "Hamburg-Harburg",
          "showVia": true,
        },
        Object {
          "name": "Hamburg Hbf",
          "showVia": true,
        },
        Object {
          "name": "Hamburg Dammtor",
        },
        Object {
          "name": "Hamburg-Altona",
        },
      ],
      "scheduledDestination": "Hamburg-Altona",
      "scheduledPlatform": "8 D-G",
      "substitute": false,
      "train": Object {
        "line": undefined,
        "longDistance": true,
        "name": "ICE 1680",
        "number": "1680",
        "type": "ICE",
      },
    },
    Object {
      "additional": undefined,
      "arrival": Object {
        "cancelled": false,
        "delay": 0,
        "hidden": false,
        "platform": "8",
        "scheduledPlatform": "8",
        "scheduledTime": 2019-03-17T12:32:00.000Z,
        "time": 2019-03-17T12:32:00.000Z,
        "wingIds": undefined,
      },
      "auslastung": true,
      "cancelled": false,
      "currentStopPlace": Object {
        "evaNumber": "test",
        "name": "test",
      },
      "departure": Object {
        "cancelled": false,
        "delay": 0,
        "hidden": false,
        "platform": "8 A-D",
        "scheduledPlatform": "8 A-D",
        "scheduledTime": 2019-03-17T12:45:00.000Z,
        "time": 2019-03-17T12:45:00.000Z,
        "wingIds": undefined,
      },
      "destination": "Bremen Hbf",
      "hiddenReihung": false,
      "id": "4550748245722881479",
      "initialDeparture": 2019-03-17T08:18:00.000Z,
      "lineNumber": undefined,
      "mediumId": "4550748245722881479-1903170818",
      "messages": Object {
        "delay": Array [],
        "him": Array [],
        "qos": Array [],
      },
      "o": "80",
      "platform": "8 A-D",
      "productClass": "F",
      "rawId": "-4550748245722881479-1903170818-10",
      "ref": undefined,
      "reihung": true,
      "route": Array [
        Object {
          "name": "München Hbf",
        },
        Object {
          "name": "München-Pasing",
        },
        Object {
          "name": "Augsburg Hbf",
        },
        Object {
          "name": "Donauwörth",
        },
        Object {
          "name": "Nürnberg Hbf",
        },
        Object {
          "name": "Würzburg Hbf",
        },
        Object {
          "name": "Fulda",
        },
        Object {
          "name": "Kassel-Wilhelmshöhe",
        },
        Object {
          "name": "Göttingen",
        },
        Object {
          "additional": undefined,
          "cancelled": false,
          "name": "test",
        },
        Object {
          "name": "Bremen Hbf",
        },
      ],
      "scheduledDestination": "Bremen Hbf",
      "scheduledPlatform": "8 A-D",
      "substitute": false,
      "train": Object {
        "line": undefined,
        "longDistance": true,
        "name": "ICE 1580",
        "number": "1580",
        "type": "ICE",
      },
    },
  ],
  "lookbehind": Array [],
  "wings": Object {},
}
`;

exports[`withFchg cancelled.xml 1`] = `
Object {
  "departures": Array [
    Object {
      "additional": undefined,
      "arrival": Object {
        "cancelled": true,
        "delay": 0,
        "hidden": false,
        "platform": "13",
        "scheduledPlatform": "13",
        "scheduledTime": 2019-03-17T12:58:00.000Z,
        "time": 2019-03-17T12:58:00.000Z,
        "wingIds": undefined,
      },
      "auslastung": false,
      "cancelled": true,
      "currentStopPlace": Object {
        "evaNumber": "test",
        "name": "test",
      },
      "departure": Object {
        "cancelled": true,
        "delay": 0,
        "hidden": false,
        "platform": "13",
        "scheduledPlatform": "13",
        "scheduledTime": 2019-03-17T13:00:00.000Z,
        "time": 2019-03-17T13:00:00.000Z,
        "wingIds": undefined,
      },
      "destination": "Düsseldorf Friedrichstadt",
      "hiddenReihung": true,
      "id": "6062058741531589910",
      "initialDeparture": 2019-03-16T14:24:00.000Z,
      "lineNumber": "8",
      "mediumId": "6062058741531589910-1903161424",
      "messages": Object {
        "delay": Array [],
        "him": Array [],
        "qos": Array [],
      },
      "o": "800354",
      "platform": "13",
      "productClass": "S",
      "rawId": "-6062058741531589910-1903161424-13",
      "ref": undefined,
      "reihung": false,
      "route": Array [
        Object {
          "name": "Mönchengladbach Hbf",
        },
        Object {
          "name": "Mönchengladbach-Lürrip",
        },
        Object {
          "name": "Korschenbroich",
        },
        Object {
          "name": "Kleinenbroich",
        },
        Object {
          "name": "Büttgen",
        },
        Object {
          "name": "Neuss Hbf",
        },
        Object {
          "name": "Neuss Am Kaiser",
        },
        Object {
          "name": "Neuss Rheinparkcenter",
        },
        Object {
          "name": "Düsseldorf-Hamm",
        },
        Object {
          "name": "Düsseldorf Völklinger Str.",
        },
        Object {
          "name": "Düsseldorf-Bilk",
        },
        Object {
          "name": "Düsseldorf Friedrichstadt",
        },
        Object {
          "additional": undefined,
          "cancelled": true,
          "name": "test",
        },
        Object {
          "cancelled": true,
          "name": "Düsseldorf-Flingern",
        },
        Object {
          "cancelled": true,
          "name": "Düsseldorf-Gerresheim",
        },
        Object {
          "cancelled": true,
          "name": "Erkrath",
        },
        Object {
          "cancelled": true,
          "name": "Hochdahl",
        },
        Object {
          "cancelled": true,
          "name": "Hochdahl-Millrath",
        },
        Object {
          "cancelled": true,
          "name": "Haan-Gruiten",
        },
        Object {
          "cancelled": true,
          "name": "Wuppertal-Vohwinkel",
        },
        Object {
          "cancelled": true,
          "name": "Wuppertal-Sonnborn",
        },
        Object {
          "cancelled": true,
          "name": "Wuppertal-Zoologischer Garten",
        },
        Object {
          "cancelled": true,
          "name": "Wuppertal-Steinbeck",
        },
        Object {
          "cancelled": true,
          "name": "Wuppertal Hbf",
        },
        Object {
          "cancelled": true,
          "name": "Wuppertal-Unterbarmen",
        },
        Object {
          "cancelled": true,
          "name": "Wuppertal-Barmen",
        },
        Object {
          "cancelled": true,
          "name": "Wuppertal-Oberbarmen",
        },
        Object {
          "cancelled": true,
          "name": "Wuppertal-Langerfeld",
        },
        Object {
          "cancelled": true,
          "name": "Schwelm West",
        },
        Object {
          "cancelled": true,
          "name": "Schwelm",
        },
        Object {
          "cancelled": true,
          "name": "Gevelsberg West",
        },
        Object {
          "cancelled": true,
          "name": "Gevelsberg-Kipp",
        },
        Object {
          "cancelled": true,
          "name": "Gevelsberg Hbf",
        },
        Object {
          "cancelled": true,
          "name": "Gevelsberg-Knapp",
        },
        Object {
          "cancelled": true,
          "name": "Hagen-Westerbauer",
        },
        Object {
          "cancelled": true,
          "name": "Hagen-Heubing",
        },
        Object {
          "cancelled": true,
          "name": "Hagen-Wehringhausen",
        },
        Object {
          "cancelled": true,
          "name": "Hagen Hbf",
        },
      ],
      "scheduledDestination": "Hagen Hbf",
      "scheduledPlatform": "13",
      "substitute": false,
      "train": Object {
        "line": "8",
        "longDistance": false,
        "name": "S 8",
        "number": "30889",
        "type": "S",
      },
    },
  ],
  "lookbehind": Array [],
  "wings": Object {},
}
`;

exports[`withFchg departureCancelled.xml 1`] = `
Object {
  "departures": Array [
    Object {
      "additional": undefined,
      "arrival": Object {
        "hidden": false,
        "platform": "13",
        "scheduledPlatform": "13",
        "scheduledTime": 2019-03-17T12:58:00.000Z,
        "time": 2019-03-17T12:58:00.000Z,
        "wingIds": undefined,
      },
      "auslastung": false,
      "cancelled": false,
      "currentStopPlace": Object {
        "evaNumber": "test",
        "name": "test",
      },
      "departure": Object {
        "cancelled": true,
        "delay": 0,
        "hidden": false,
        "platform": "13",
        "scheduledPlatform": "13",
        "scheduledTime": 2019-03-17T13:00:00.000Z,
        "time": 2019-03-17T13:00:00.000Z,
        "wingIds": undefined,
      },
      "destination": "test",
      "hiddenReihung": true,
      "id": "6062058741531589910",
      "initialDeparture": 2019-03-16T14:24:00.000Z,
      "lineNumber": "8",
      "mediumId": "6062058741531589910-1903161424",
      "messages": Object {
        "delay": Array [],
        "him": Array [],
        "qos": Array [],
      },
      "o": "800354",
      "platform": "13",
      "productClass": "S",
      "rawId": "-6062058741531589910-1903161424-13",
      "ref": undefined,
      "reihung": false,
      "route": Array [
        Object {
          "name": "Mönchengladbach Hbf",
        },
        Object {
          "name": "Mönchengladbach-Lürrip",
        },
        Object {
          "name": "Korschenbroich",
        },
        Object {
          "name": "Kleinenbroich",
        },
        Object {
          "name": "Büttgen",
        },
        Object {
          "name": "Neuss Hbf",
        },
        Object {
          "name": "Neuss Am Kaiser",
        },
        Object {
          "name": "Neuss Rheinparkcenter",
        },
        Object {
          "name": "Düsseldorf-Hamm",
        },
        Object {
          "name": "Düsseldorf Völklinger Str.",
        },
        Object {
          "name": "Düsseldorf-Bilk",
        },
        Object {
          "name": "Düsseldorf Friedrichstadt",
        },
        Object {
          "additional": undefined,
          "cancelled": false,
          "name": "test",
        },
        Object {
          "cancelled": true,
          "name": "Düsseldorf-Flingern",
        },
        Object {
          "cancelled": true,
          "name": "Düsseldorf-Gerresheim",
        },
        Object {
          "cancelled": true,
          "name": "Erkrath",
        },
        Object {
          "cancelled": true,
          "name": "Hochdahl",
        },
        Object {
          "cancelled": true,
          "name": "Hochdahl-Millrath",
        },
        Object {
          "cancelled": true,
          "name": "Haan-Gruiten",
        },
        Object {
          "cancelled": true,
          "name": "Wuppertal-Vohwinkel",
        },
        Object {
          "cancelled": true,
          "name": "Wuppertal-Sonnborn",
        },
        Object {
          "cancelled": true,
          "name": "Wuppertal-Zoologischer Garten",
        },
        Object {
          "cancelled": true,
          "name": "Wuppertal-Steinbeck",
        },
        Object {
          "cancelled": true,
          "name": "Wuppertal Hbf",
        },
        Object {
          "cancelled": true,
          "name": "Wuppertal-Unterbarmen",
        },
        Object {
          "cancelled": true,
          "name": "Wuppertal-Barmen",
        },
        Object {
          "cancelled": true,
          "name": "Wuppertal-Oberbarmen",
        },
        Object {
          "cancelled": true,
          "name": "Wuppertal-Langerfeld",
        },
        Object {
          "cancelled": true,
          "name": "Schwelm West",
        },
        Object {
          "cancelled": true,
          "name": "Schwelm",
        },
        Object {
          "cancelled": true,
          "name": "Gevelsberg West",
        },
        Object {
          "cancelled": true,
          "name": "Gevelsberg-Kipp",
        },
        Object {
          "cancelled": true,
          "name": "Gevelsberg Hbf",
        },
        Object {
          "cancelled": true,
          "name": "Gevelsberg-Knapp",
        },
        Object {
          "cancelled": true,
          "name": "Hagen-Westerbauer",
        },
        Object {
          "cancelled": true,
          "name": "Hagen-Heubing",
        },
        Object {
          "cancelled": true,
          "name": "Hagen-Wehringhausen",
        },
        Object {
          "cancelled": true,
          "name": "Hagen Hbf",
        },
      ],
      "scheduledDestination": "Hagen Hbf",
      "scheduledPlatform": "13",
      "substitute": false,
      "train": Object {
        "line": "8",
        "longDistance": false,
        "name": "S 8",
        "number": "30889",
        "type": "S",
      },
    },
  ],
  "lookbehind": Array [],
  "wings": Object {},
}
`;

exports[`withFchg departureWing.xml 1`] = `
Object {
  "departures": Array [
    Object {
      "additional": undefined,
      "arrival": Object {
        "cancelled": false,
        "delay": -1,
        "hidden": false,
        "platform": "4 D-G",
        "scheduledPlatform": "4 D-G",
        "scheduledTime": 2019-03-17T13:22:00.000Z,
        "time": 2019-03-17T13:21:00.000Z,
        "wingIds": undefined,
      },
      "auslastung": true,
      "cancelled": false,
      "currentStopPlace": Object {
        "evaNumber": "test",
        "name": "test",
      },
      "departure": Object {
        "cancelled": false,
        "delay": 0,
        "hidden": false,
        "platform": "4",
        "scheduledPlatform": "4",
        "scheduledTime": 2019-03-17T13:26:00.000Z,
        "time": 2019-03-17T13:26:00.000Z,
        "wingIds": Array [
          "8086827825752200553-1903171315",
        ],
      },
      "destination": "München Hbf",
      "hiddenReihung": false,
      "id": "6523045328284948841",
      "initialDeparture": 2019-03-17T12:46:00.000Z,
      "lineNumber": undefined,
      "mediumId": "6523045328284948841-1903171246",
      "messages": Object {
        "delay": Array [],
        "him": Array [],
        "qos": Array [],
      },
      "o": "80",
      "platform": "4",
      "productClass": "F",
      "rawId": "6523045328284948841-1903171246-5",
      "ref": undefined,
      "reihung": true,
      "route": Array [
        Object {
          "name": "Hamburg-Altona",
        },
        Object {
          "name": "Hamburg Dammtor",
        },
        Object {
          "name": "Hamburg Hbf",
        },
        Object {
          "name": "Hamburg-Harburg",
        },
        Object {
          "additional": undefined,
          "cancelled": false,
          "name": "test",
        },
        Object {
          "name": "Göttingen",
          "showVia": true,
        },
        Object {
          "name": "Kassel-Wilhelmshöhe",
        },
        Object {
          "name": "Fulda",
        },
        Object {
          "name": "Würzburg Hbf",
          "showVia": true,
        },
        Object {
          "name": "Nürnberg Hbf",
          "showVia": true,
        },
        Object {
          "name": "Ingolstadt Hbf",
        },
        Object {
          "name": "München Hbf",
        },
      ],
      "scheduledDestination": "München Hbf",
      "scheduledPlatform": "4",
      "substitute": false,
      "train": Object {
        "line": undefined,
        "longDistance": true,
        "name": "ICE 1689",
        "number": "1689",
        "type": "ICE",
      },
    },
  ],
  "lookbehind": Array [],
  "wings": Object {
    "8086827825752200553-1903171315": Object {
      "additional": undefined,
      "arrival": Object {
        "cancelled": false,
        "delay": 0,
        "hidden": false,
        "platform": "4 A-C",
        "scheduledPlatform": "4 A-C",
        "scheduledTime": 2019-03-17T13:14:00.000Z,
        "time": 2019-03-17T13:14:00.000Z,
        "wingIds": undefined,
      },
      "auslastung": true,
      "cancelled": false,
      "currentStopPlace": Object {
        "evaNumber": "test",
        "name": "test",
      },
      "departure": Object {
        "cancelled": false,
        "delay": 0,
        "hidden": false,
        "platform": "4",
        "scheduledPlatform": "4",
        "scheduledTime": 2019-03-17T13:26:00.000Z,
        "time": 2019-03-17T13:26:00.000Z,
        "wingIds": undefined,
      },
      "destination": "München Hbf",
      "hiddenReihung": false,
      "id": "8086827825752200553",
      "initialDeparture": 2019-03-17T13:15:00.000Z,
      "lineNumber": undefined,
      "mediumId": "8086827825752200553-1903171315",
      "messages": Object {
        "delay": Array [],
        "him": Array [],
        "qos": Array [],
      },
      "o": "80",
      "platform": "4",
      "productClass": "F",
      "rawId": "-8086827825752200553-1903171315-2",
      "ref": undefined,
      "reihung": true,
      "route": Array [
        Object {
          "name": "Bremen Hbf",
        },
        Object {
          "additional": undefined,
          "cancelled": false,
          "name": "test",
        },
        Object {
          "name": "Göttingen",
          "showVia": true,
        },
        Object {
          "name": "Kassel-Wilhelmshöhe",
        },
        Object {
          "name": "Fulda",
        },
        Object {
          "name": "Würzburg Hbf",
          "showVia": true,
        },
        Object {
          "name": "Nürnberg Hbf",
          "showVia": true,
        },
        Object {
          "name": "Ingolstadt Hbf",
        },
        Object {
          "name": "München Hbf",
        },
      ],
      "scheduledDestination": "München Hbf",
      "scheduledPlatform": "4",
      "substitute": false,
      "train": Object {
        "line": undefined,
        "longDistance": true,
        "name": "ICE 1589",
        "number": "1589",
        "type": "ICE",
      },
    },
  },
}
`;

exports[`withFchg filteredDueToTime.xml 1`] = `
Object {
  "departures": Array [],
  "lookbehind": Array [],
  "wings": Object {},
}
`;

exports[`withFchg lookbehind.xml 1`] = `
Object {
  "departures": Array [
    Object {
      "additional": undefined,
      "arrival": Object {
        "cancelled": false,
        "delay": -11,
        "hidden": false,
        "platform": "16",
        "scheduledPlatform": "16",
        "scheduledTime": 2019-03-17T12:49:00.000Z,
        "time": 2019-03-17T12:38:00.000Z,
        "wingIds": undefined,
      },
      "auslastung": true,
      "cancelled": false,
      "currentStopPlace": Object {
        "evaNumber": "test",
        "name": "test",
      },
      "departure": Object {
        "cancelled": false,
        "delay": -11,
        "hidden": false,
        "platform": "16",
        "scheduledPlatform": "16",
        "scheduledTime": 2019-03-17T12:51:00.000Z,
        "time": 2019-03-17T12:40:00.000Z,
        "wingIds": undefined,
      },
      "destination": "Frankfurt (M)  Flughafen Fernbf",
      "hiddenReihung": false,
      "id": "1869793107893408377",
      "initialDeparture": 2019-03-17T10:38:00.000Z,
      "lineNumber": undefined,
      "mediumId": "1869793107893408377-1903171038",
      "messages": Object {
        "delay": Array [
          Object {
            "priority": undefined,
            "superseded": undefined,
            "text": "Technische Störung an einem anderen Zug",
            "timestamp": 2019-03-17T12:00:00.000Z,
            "value": 55,
          },
        ],
        "him": Array [],
        "qos": Array [],
      },
      "o": "84",
      "platform": "16",
      "productClass": "F",
      "rawId": "1869793107893408377-1903171038-6",
      "ref": undefined,
      "reihung": true,
      "route": Array [
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "Amsterdam Centraal",
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "Utrecht Centraal",
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "Arnhem Centraal",
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "Oberhausen Hbf",
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "Duisburg Hbf",
        },
        Object {
          "additional": undefined,
          "cancelled": false,
          "name": "test",
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "Köln Hbf",
          "showVia": true,
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "Frankfurt (M)  Flughafen Fernbf",
        },
        Object {
          "additional": undefined,
          "cancelled": true,
          "name": "Frankfurt (Main) Hbf",
        },
      ],
      "scheduledDestination": "Frankfurt (Main) Hbf",
      "scheduledPlatform": "16",
      "substitute": false,
      "train": Object {
        "line": undefined,
        "longDistance": true,
        "name": "ICE 123",
        "number": "123",
        "type": "ICE",
      },
    },
  ],
  "lookbehind": Array [],
  "wings": Object {},
}
`;

exports[`withFchg multipleWings.xml 1`] = `
Object {
  "departures": Array [
    Object {
      "additional": undefined,
      "arrival": undefined,
      "auslastung": false,
      "cancelled": false,
      "currentStopPlace": Object {
        "evaNumber": "test",
        "name": "test",
      },
      "departure": Object {
        "cancelled": false,
        "delay": 1,
        "hidden": false,
        "platform": "34",
        "scheduledPlatform": "34",
        "scheduledTime": 2019-03-17T12:04:00.000Z,
        "time": 2019-03-17T12:05:00.000Z,
        "wingIds": Array [
          "2583448959431566845-1903171304",
          "7715731422484591852-1903171304",
        ],
      },
      "destination": "Bayrischzell",
      "hiddenReihung": false,
      "id": "4645697665836328305",
      "initialDeparture": 2019-03-17T13:04:00.000Z,
      "lineNumber": undefined,
      "mediumId": "4645697665836328305-1903171304",
      "messages": Object {
        "delay": Array [],
        "him": Array [],
        "qos": Array [],
      },
      "o": "T8",
      "platform": "34",
      "productClass": "D",
      "rawId": "4645697665836328305-1903171304-1",
      "ref": undefined,
      "reihung": false,
      "route": Array [
        Object {
          "additional": undefined,
          "cancelled": false,
          "name": "test",
        },
        Object {
          "additional": true,
          "cancelled": undefined,
          "name": "München Donnersbergerbrücke",
          "showVia": true,
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "München Harras",
          "showVia": true,
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "München-Solln",
          "showVia": true,
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "Holzkirchen",
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "Darching",
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "Miesbach",
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "Agatharied",
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "Hausham",
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "Schliersee",
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "Fischhausen-Neuhaus",
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "Fischbachau",
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "Geitau",
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "Osterhofen (Oberbay)",
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "Bayrischzell",
        },
      ],
      "scheduledDestination": "Bayrischzell",
      "scheduledPlatform": "34",
      "substitute": false,
      "train": Object {
        "line": undefined,
        "longDistance": false,
        "name": "BOB 86871",
        "number": "86871",
        "type": "BOB",
      },
    },
  ],
  "lookbehind": Array [],
  "wings": Object {
    "2583448959431566845-1903171304": Object {
      "additional": undefined,
      "arrival": undefined,
      "auslastung": false,
      "cancelled": false,
      "currentStopPlace": Object {
        "evaNumber": "test",
        "name": "test",
      },
      "departure": Object {
        "cancelled": false,
        "delay": 0,
        "hidden": false,
        "platform": "34",
        "scheduledPlatform": "34",
        "scheduledTime": 2019-03-17T12:04:00.000Z,
        "time": 2019-03-17T12:04:00.000Z,
        "wingIds": undefined,
      },
      "destination": "Tegernsee",
      "hiddenReihung": false,
      "id": "2583448959431566845",
      "initialDeparture": 2019-03-17T13:04:00.000Z,
      "lineNumber": undefined,
      "mediumId": "2583448959431566845-1903171304",
      "messages": Object {
        "delay": Array [],
        "him": Array [],
        "qos": Array [],
      },
      "o": "T8",
      "platform": "34",
      "productClass": "D",
      "rawId": "-2583448959431566845-1903171304-1",
      "ref": undefined,
      "reihung": false,
      "route": Array [
        Object {
          "additional": undefined,
          "cancelled": false,
          "name": "test",
        },
        Object {
          "additional": true,
          "cancelled": undefined,
          "name": "München Donnersbergerbrücke",
          "showVia": true,
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "München Harras",
          "showVia": true,
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "München-Solln",
          "showVia": true,
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "Holzkirchen",
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "Warngau",
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "Schaftlach",
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "Moosrain",
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "Finsterwald",
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "Gmund (Tegernsee)",
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "Tegernsee",
        },
      ],
      "scheduledDestination": "Tegernsee",
      "scheduledPlatform": "34",
      "substitute": false,
      "train": Object {
        "line": undefined,
        "longDistance": false,
        "name": "BOB 86971",
        "number": "86971",
        "type": "BOB",
      },
    },
    "7715731422484591852-1903171304": Object {
      "additional": undefined,
      "arrival": undefined,
      "auslastung": false,
      "cancelled": false,
      "currentStopPlace": Object {
        "evaNumber": "test",
        "name": "test",
      },
      "departure": Object {
        "cancelled": false,
        "delay": 1,
        "hidden": false,
        "platform": "34",
        "scheduledPlatform": "34",
        "scheduledTime": 2019-03-17T12:04:00.000Z,
        "time": 2019-03-17T12:05:00.000Z,
        "wingIds": undefined,
      },
      "destination": "Lenggries",
      "hiddenReihung": false,
      "id": "7715731422484591852",
      "initialDeparture": 2019-03-17T13:04:00.000Z,
      "lineNumber": undefined,
      "mediumId": "7715731422484591852-1903171304",
      "messages": Object {
        "delay": Array [],
        "him": Array [],
        "qos": Array [],
      },
      "o": "T8",
      "platform": "34",
      "productClass": "D",
      "rawId": "-7715731422484591852-1903171304-1",
      "ref": undefined,
      "reihung": false,
      "route": Array [
        Object {
          "additional": undefined,
          "cancelled": false,
          "name": "test",
        },
        Object {
          "additional": true,
          "cancelled": undefined,
          "name": "München Donnersbergerbrücke",
          "showVia": true,
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "München Harras",
          "showVia": true,
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "München-Solln",
          "showVia": true,
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "Holzkirchen",
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "Warngau",
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "Schaftlach",
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "Reichersbeuern",
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "Bad Tölz",
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "Gaißach",
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "Obergries",
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "Lenggries",
        },
      ],
      "scheduledDestination": "Lenggries",
      "scheduledPlatform": "34",
      "substitute": false,
      "train": Object {
        "line": undefined,
        "longDistance": false,
        "name": "BOB 86921",
        "number": "86921",
        "type": "BOB",
      },
    },
  },
}
`;

exports[`withFchg onlyArrival.xml 1`] = `
Object {
  "departures": Array [
    Object {
      "additional": undefined,
      "arrival": Object {
        "cancelled": false,
        "delay": 0,
        "hidden": false,
        "platform": "10",
        "scheduledPlatform": "10",
        "scheduledTime": 2019-03-17T12:24:00.000Z,
        "time": 2019-03-17T12:24:00.000Z,
        "wingIds": undefined,
      },
      "auslastung": false,
      "cancelled": undefined,
      "currentStopPlace": Object {
        "evaNumber": "test",
        "name": "test",
      },
      "departure": undefined,
      "destination": "test",
      "hiddenReihung": false,
      "id": "425081070176277607",
      "initialDeparture": 2019-03-17T11:00:00.000Z,
      "lineNumber": "RE11",
      "mediumId": "425081070176277607-1903171100",
      "messages": Object {
        "delay": Array [],
        "him": Array [],
        "qos": Array [],
      },
      "o": "AR",
      "platform": "10",
      "productClass": "D",
      "rawId": "425081070176277607-1903171100-11",
      "ref": undefined,
      "reihung": false,
      "route": Array [
        Object {
          "name": "Hamm (Westf)",
        },
        Object {
          "name": "Kamen",
        },
        Object {
          "name": "Kamen-Methler",
        },
        Object {
          "name": "Dortmund Hbf",
        },
        Object {
          "name": "Bochum Hbf",
        },
        Object {
          "name": "Wattenscheid",
        },
        Object {
          "name": "Essen Hbf",
        },
        Object {
          "name": "Mülheim (Ruhr) Hbf",
        },
        Object {
          "name": "Duisburg Hbf",
        },
        Object {
          "name": "Düsseldorf Flughafen",
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "test",
        },
      ],
      "scheduledDestination": "test",
      "scheduledPlatform": "10",
      "substitute": false,
      "train": Object {
        "line": "RE11",
        "longDistance": false,
        "name": "ABR RE11",
        "number": "26712",
        "type": "ABR",
      },
    },
  ],
  "lookbehind": Array [],
  "wings": Object {},
}
`;

exports[`withFchg onlyDeparture.xml 1`] = `
Object {
  "departures": Array [
    Object {
      "additional": undefined,
      "arrival": undefined,
      "auslastung": false,
      "cancelled": false,
      "currentStopPlace": Object {
        "evaNumber": "test",
        "name": "test",
      },
      "departure": Object {
        "cancelled": false,
        "delay": 1,
        "hidden": false,
        "platform": "10",
        "scheduledPlatform": "10",
        "scheduledTime": 2019-03-17T12:36:00.000Z,
        "time": 2019-03-17T12:37:00.000Z,
        "wingIds": undefined,
      },
      "destination": "Paderborn Hbf",
      "hiddenReihung": false,
      "id": "1178432179369711067",
      "initialDeparture": 2019-03-17T12:36:00.000Z,
      "lineNumber": "RE11",
      "mediumId": "1178432179369711067-1903171236",
      "messages": Object {
        "delay": Array [],
        "him": Array [],
        "qos": Array [],
      },
      "o": "AR",
      "platform": "10",
      "productClass": "D",
      "rawId": "1178432179369711067-1903171236-1",
      "ref": undefined,
      "reihung": false,
      "route": Array [
        Object {
          "additional": undefined,
          "cancelled": false,
          "name": "test",
        },
        Object {
          "name": "Düsseldorf Flughafen",
          "showVia": true,
        },
        Object {
          "name": "Duisburg Hbf",
          "showVia": true,
        },
        Object {
          "name": "Mülheim (Ruhr) Hbf",
          "showVia": true,
        },
        Object {
          "name": "Essen Hbf",
        },
        Object {
          "name": "Wattenscheid",
        },
        Object {
          "name": "Bochum Hbf",
        },
        Object {
          "name": "Dortmund Hbf",
        },
        Object {
          "name": "Kamen-Methler",
        },
        Object {
          "name": "Kamen",
        },
        Object {
          "name": "Hamm (Westf)",
        },
        Object {
          "name": "Soest",
        },
        Object {
          "name": "Lippstadt",
        },
        Object {
          "name": "Paderborn Hbf",
        },
      ],
      "scheduledDestination": "Paderborn Hbf",
      "scheduledPlatform": "10",
      "substitute": false,
      "train": Object {
        "line": "RE11",
        "longDistance": false,
        "name": "ABR RE11",
        "number": "26719",
        "type": "ABR",
      },
    },
  ],
  "lookbehind": Array [],
  "wings": Object {},
}
`;

exports[`withFchg simple1.xml 1`] = `
Object {
  "departures": Array [
    Object {
      "additional": undefined,
      "arrival": Object {
        "hidden": false,
        "platform": "13",
        "scheduledPlatform": "13",
        "scheduledTime": 2019-03-17T12:58:00.000Z,
        "time": 2019-03-17T12:58:00.000Z,
        "wingIds": undefined,
      },
      "auslastung": false,
      "cancelled": undefined,
      "currentStopPlace": Object {
        "evaNumber": "test",
        "name": "test",
      },
      "departure": Object {
        "hidden": false,
        "platform": "13",
        "scheduledPlatform": "13",
        "scheduledTime": 2019-03-17T13:00:00.000Z,
        "time": 2019-03-17T13:00:00.000Z,
        "wingIds": undefined,
      },
      "destination": "Hagen Hbf",
      "hiddenReihung": true,
      "id": "6062058741531589910",
      "initialDeparture": 2019-03-16T14:24:00.000Z,
      "lineNumber": "8",
      "mediumId": "6062058741531589910-1903161424",
      "messages": Object {
        "delay": Array [],
        "him": Array [],
        "qos": Array [],
      },
      "o": "800354",
      "platform": "13",
      "productClass": "S",
      "rawId": "-6062058741531589910-1903161424-13",
      "reihung": false,
      "route": Array [
        Object {
          "name": "Mönchengladbach Hbf",
        },
        Object {
          "name": "Mönchengladbach-Lürrip",
        },
        Object {
          "name": "Korschenbroich",
        },
        Object {
          "name": "Kleinenbroich",
        },
        Object {
          "name": "Büttgen",
        },
        Object {
          "name": "Neuss Hbf",
        },
        Object {
          "name": "Neuss Am Kaiser",
        },
        Object {
          "name": "Neuss Rheinparkcenter",
        },
        Object {
          "name": "Düsseldorf-Hamm",
        },
        Object {
          "name": "Düsseldorf Völklinger Str.",
        },
        Object {
          "name": "Düsseldorf-Bilk",
        },
        Object {
          "name": "Düsseldorf Friedrichstadt",
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "test",
        },
        Object {
          "name": "Düsseldorf-Flingern",
          "showVia": true,
        },
        Object {
          "name": "Düsseldorf-Gerresheim",
        },
        Object {
          "name": "Erkrath",
        },
        Object {
          "name": "Hochdahl",
        },
        Object {
          "name": "Hochdahl-Millrath",
        },
        Object {
          "name": "Haan-Gruiten",
        },
        Object {
          "name": "Wuppertal-Vohwinkel",
        },
        Object {
          "name": "Wuppertal-Sonnborn",
        },
        Object {
          "name": "Wuppertal-Zoologischer Garten",
        },
        Object {
          "name": "Wuppertal-Steinbeck",
        },
        Object {
          "name": "Wuppertal Hbf",
          "showVia": true,
        },
        Object {
          "name": "Wuppertal-Unterbarmen",
        },
        Object {
          "name": "Wuppertal-Barmen",
        },
        Object {
          "name": "Wuppertal-Oberbarmen",
        },
        Object {
          "name": "Wuppertal-Langerfeld",
        },
        Object {
          "name": "Schwelm West",
        },
        Object {
          "name": "Schwelm",
        },
        Object {
          "name": "Gevelsberg West",
        },
        Object {
          "name": "Gevelsberg-Kipp",
        },
        Object {
          "name": "Gevelsberg Hbf",
          "showVia": true,
        },
        Object {
          "name": "Gevelsberg-Knapp",
        },
        Object {
          "name": "Hagen-Westerbauer",
        },
        Object {
          "name": "Hagen-Heubing",
        },
        Object {
          "name": "Hagen-Wehringhausen",
        },
        Object {
          "name": "Hagen Hbf",
        },
      ],
      "scheduledDestination": "Hagen Hbf",
      "scheduledPlatform": "13",
      "substitute": false,
      "train": Object {
        "line": "8",
        "longDistance": false,
        "name": "S 8",
        "number": "30889",
        "type": "S",
      },
    },
  ],
  "lookbehind": Array [],
  "wings": Object {},
}
`;

exports[`withFchg simple2.xml 1`] = `
Object {
  "departures": Array [
    Object {
      "additional": undefined,
      "arrival": Object {
        "cancelled": false,
        "delay": 3,
        "hidden": false,
        "platform": "16",
        "scheduledPlatform": "16",
        "scheduledTime": 2019-03-17T12:46:00.000Z,
        "time": 2019-03-17T12:49:00.000Z,
        "wingIds": undefined,
      },
      "auslastung": true,
      "cancelled": false,
      "currentStopPlace": Object {
        "evaNumber": "test",
        "name": "test",
      },
      "departure": Object {
        "cancelled": false,
        "delay": 3,
        "hidden": false,
        "platform": "16",
        "scheduledPlatform": "16",
        "scheduledTime": 2019-03-17T12:48:00.000Z,
        "time": 2019-03-17T12:51:00.000Z,
        "wingIds": undefined,
      },
      "destination": "Frankfurt (M)  Flughafen Fernbf",
      "hiddenReihung": false,
      "id": "1869793107893408377",
      "initialDeparture": 2019-03-17T10:38:00.000Z,
      "lineNumber": undefined,
      "mediumId": "1869793107893408377-1903171038",
      "messages": Object {
        "delay": Array [
          Object {
            "priority": undefined,
            "superseded": undefined,
            "text": "Technische Störung an einem anderen Zug",
            "timestamp": 2019-03-17T12:00:00.000Z,
            "value": 55,
          },
        ],
        "him": Array [],
        "qos": Array [],
      },
      "o": "84",
      "platform": "16",
      "productClass": "F",
      "rawId": "1869793107893408377-1903171038-6",
      "ref": undefined,
      "reihung": true,
      "route": Array [
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "Amsterdam Centraal",
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "Utrecht Centraal",
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "Arnhem Centraal",
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "Oberhausen Hbf",
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "Duisburg Hbf",
        },
        Object {
          "additional": undefined,
          "cancelled": false,
          "name": "test",
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "Köln Hbf",
          "showVia": true,
        },
        Object {
          "additional": undefined,
          "cancelled": undefined,
          "name": "Frankfurt (M)  Flughafen Fernbf",
        },
        Object {
          "additional": undefined,
          "cancelled": true,
          "name": "Frankfurt (Main) Hbf",
        },
      ],
      "scheduledDestination": "Frankfurt (Main) Hbf",
      "scheduledPlatform": "16",
      "substitute": false,
      "train": Object {
        "line": undefined,
        "longDistance": true,
        "name": "ICE 123",
        "number": "123",
        "type": "ICE",
      },
    },
  ],
  "lookbehind": Array [],
  "wings": Object {},
}
`;

exports[`withFchg visibleDueToDelay.xml 1`] = `
Object {
  "departures": Array [
    Object {
      "additional": undefined,
      "arrival": Object {
        "cancelled": false,
        "delay": 120,
        "hidden": false,
        "platform": "13",
        "scheduledPlatform": "13",
        "scheduledTime": 2019-03-17T10:58:00.000Z,
        "time": 2019-03-17T12:58:00.000Z,
        "wingIds": undefined,
      },
      "auslastung": false,
      "cancelled": false,
      "currentStopPlace": Object {
        "evaNumber": "test",
        "name": "test",
      },
      "departure": Object {
        "cancelled": false,
        "delay": 119,
        "hidden": false,
        "platform": "13",
        "scheduledPlatform": "13",
        "scheduledTime": 2019-03-17T11:00:00.000Z,
        "time": 2019-03-17T12:59:00.000Z,
        "wingIds": undefined,
      },
      "destination": "Hagen Hbf",
      "hiddenReihung": true,
      "id": "6062058741531589910",
      "initialDeparture": 2019-03-16T14:24:00.000Z,
      "lineNumber": "8",
      "mediumId": "6062058741531589910-1903161424",
      "messages": Object {
        "delay": Array [],
        "him": Array [],
        "qos": Array [],
      },
      "o": "800354",
      "platform": "13",
      "productClass": "S",
      "rawId": "-6062058741531589910-1903161424-13",
      "ref": undefined,
      "reihung": false,
      "route": Array [
        Object {
          "name": "Mönchengladbach Hbf",
        },
        Object {
          "name": "Mönchengladbach-Lürrip",
        },
        Object {
          "name": "Korschenbroich",
        },
        Object {
          "name": "Kleinenbroich",
        },
        Object {
          "name": "Büttgen",
        },
        Object {
          "name": "Neuss Hbf",
        },
        Object {
          "name": "Neuss Am Kaiser",
        },
        Object {
          "name": "Neuss Rheinparkcenter",
        },
        Object {
          "name": "Düsseldorf-Hamm",
        },
        Object {
          "name": "Düsseldorf Völklinger Str.",
        },
        Object {
          "name": "Düsseldorf-Bilk",
        },
        Object {
          "name": "Düsseldorf Friedrichstadt",
        },
        Object {
          "additional": undefined,
          "cancelled": false,
          "name": "test",
        },
        Object {
          "name": "Düsseldorf-Flingern",
          "showVia": true,
        },
        Object {
          "name": "Düsseldorf-Gerresheim",
        },
        Object {
          "name": "Erkrath",
        },
        Object {
          "name": "Hochdahl",
        },
        Object {
          "name": "Hochdahl-Millrath",
        },
        Object {
          "name": "Haan-Gruiten",
        },
        Object {
          "name": "Wuppertal-Vohwinkel",
        },
        Object {
          "name": "Wuppertal-Sonnborn",
        },
        Object {
          "name": "Wuppertal-Zoologischer Garten",
        },
        Object {
          "name": "Wuppertal-Steinbeck",
        },
        Object {
          "name": "Wuppertal Hbf",
          "showVia": true,
        },
        Object {
          "name": "Wuppertal-Unterbarmen",
        },
        Object {
          "name": "Wuppertal-Barmen",
        },
        Object {
          "name": "Wuppertal-Oberbarmen",
        },
        Object {
          "name": "Wuppertal-Langerfeld",
        },
        Object {
          "name": "Schwelm West",
        },
        Object {
          "name": "Schwelm",
        },
        Object {
          "name": "Gevelsberg West",
        },
        Object {
          "name": "Gevelsberg-Kipp",
        },
        Object {
          "name": "Gevelsberg Hbf",
          "showVia": true,
        },
        Object {
          "name": "Gevelsberg-Knapp",
        },
        Object {
          "name": "Hagen-Westerbauer",
        },
        Object {
          "name": "Hagen-Heubing",
        },
        Object {
          "name": "Hagen-Wehringhausen",
        },
        Object {
          "name": "Hagen Hbf",
        },
      ],
      "scheduledDestination": "Hagen Hbf",
      "scheduledPlatform": "13",
      "substitute": false,
      "train": Object {
        "line": "8",
        "longDistance": false,
        "name": "S 8",
        "number": "30889",
        "type": "S",
      },
    },
  ],
  "lookbehind": Array [],
  "wings": Object {},
}
`;

exports[`withFchg wings.xml 1`] = `
Object {
  "departures": Array [
    Object {
      "additional": undefined,
      "arrival": Object {
        "cancelled": false,
        "delay": 0,
        "hidden": false,
        "platform": "4",
        "scheduledPlatform": "4",
        "scheduledTime": 2019-03-17T13:51:00.000Z,
        "time": 2019-03-17T13:51:00.000Z,
        "wingIds": Array [
          "4249721926697031159-1903171328",
        ],
      },
      "auslastung": true,
      "cancelled": false,
      "currentStopPlace": Object {
        "evaNumber": "test",
        "name": "test",
      },
      "departure": Object {
        "cancelled": false,
        "delay": 2,
        "hidden": false,
        "platform": "4",
        "scheduledPlatform": "4",
        "scheduledTime": 2019-03-17T13:54:00.000Z,
        "time": 2019-03-17T13:56:00.000Z,
        "wingIds": Array [
          "4249721926697031159-1903171328",
        ],
      },
      "destination": "München Hbf",
      "hiddenReihung": false,
      "id": "7616096009230090656",
      "initialDeparture": 2019-03-17T13:28:00.000Z,
      "lineNumber": undefined,
      "mediumId": "7616096009230090656-1903171328",
      "messages": Object {
        "delay": Array [],
        "him": Array [],
        "qos": Array [],
      },
      "o": "80",
      "platform": "4",
      "productClass": "F",
      "rawId": "7616096009230090656-1903171328-5",
      "ref": undefined,
      "reihung": true,
      "route": Array [
        Object {
          "name": "Hamburg Hbf",
        },
        Object {
          "name": "Hamburg-Harburg",
        },
        Object {
          "name": "Lüneburg",
        },
        Object {
          "name": "Uelzen",
        },
        Object {
          "additional": undefined,
          "cancelled": false,
          "name": "test",
        },
        Object {
          "name": "Göttingen",
          "showVia": true,
        },
        Object {
          "name": "Kassel-Wilhelmshöhe",
        },
        Object {
          "name": "Fulda",
        },
        Object {
          "name": "Würzburg Hbf",
          "showVia": true,
        },
        Object {
          "name": "Treuchtlingen",
        },
        Object {
          "name": "Donauwörth",
        },
        Object {
          "name": "Augsburg Hbf",
          "showVia": true,
        },
        Object {
          "name": "München Hbf",
        },
      ],
      "scheduledDestination": "München Hbf",
      "scheduledPlatform": "4",
      "substitute": false,
      "train": Object {
        "line": undefined,
        "longDistance": true,
        "name": "ICE 1587",
        "number": "1587",
        "type": "ICE",
      },
    },
  ],
  "lookbehind": Array [],
  "wings": Object {},
}
`;
